--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -23,6 +23,6 @@
   <p>Usługa korzysta z publicznego API CodeSandbox (<a href="https://codesandbox.io" target="_blank">https://codesandbox.io</a>), którego polityka prywatności obowiązuje równolegle.</p>
 
   <h2>Kontakt</h2>
-  <p>W razie pytań dotyczących prywatności, możesz napisać na adres e-mail: <strong>kontakt@twojadomena.pl</strong></p>
+  <p>W razie pytań dotyczących prywatności, możesz napisać na adres e-mail: <strong>pbmr1996@gmail.com</strong></p>
 </body>
 </html>
